--- a/src/components/Testimonial.scss
+++ b/src/components/Testimonial.scss
@@ -63,6 +63,15 @@
                        figure{
                             img{
                                 margin-left:auto;
+                                max-width: 300px;
+                                width: 80%;
+                                
+                            }
+                            figcaption{
+                                b{
+                                    color: rgb(64, 86, 32);
+                                    
+                                }
                             }
                        }
                     }
@@ -81,8 +90,12 @@
                             img{
                                 margin-right:auto;
                                 max-width: 300px;
-                                width: 100%;
-                                margin-top: -50px;
+                                width: 95%;
+                                
+                            }figcaption{
+                                b{
+                                    color: rgb(64, 86, 32);
+                                }
                             }
                         }
                     }
@@ -99,8 +112,14 @@
                         }
                         figure{
                             img{
-                                margin-left:auto;
+                                margin-right:auto;
+                                max-width: 300px;
+                                width: 80%;
                                 margin-top: -50px;
+                            }figcaption{
+                                b{
+                                    color: rgb(64, 86, 32);
+                                }
                             }
                         }
                         &:focus{
